objects/GL_Account__c.object
<CustomObject>
    <fields>
        <fullName>Legal_Entity_Count__c</fullName>
        <label>Legal Entity Count</label>
        <summaryForeignKey>GL_Account_Legal_Entity__c.GL_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>Legal_Entity__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Netsuite_Type__c</fullName>
        <label>NetSuite Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other Current Asset</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Long Term Asset</fullName>
                </value>
                <value>
                    <fullName>Prepaid Expense</fullName>
                </value>
                <value>
                    <fullName>Long Term Liability</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset</fullName>
                </value>
                <value>
                    <fullName>Other Current Liability</fullName>
                </value>
                <value>
                    <fullName>Deferred Revenue</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Other Expense</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>Statistical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewUpdate_Request_Indicator__c</fullName>
        <description>used in Approval Request template</description>
        <formula>IF(NewUpdated_Indicator__c = &quot;Updated&quot;, &quot;Update&quot;,
IF(NewUpdated_Indicator__c = &quot;Closed&quot;, &quot;Close&quot;, NewUpdated_Indicator__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewUpdate Request Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewUpdated_Indicator__c</fullName>
        <formula>IF (TEXT(Status__c) = &quot;Inactive&quot;, &quot;Closed&quot;,
IF(Approval_Counter__c = 0 || ISNULL(Approval_Counter__c), &quot;New&quot;, &quot;Updated&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewUpdated Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent1__c</fullName>
        <label>Parent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Not Used</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Account_Status__c</fullName>
        <label>Plan Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_CONSOL__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_FS__c</fullName>
        <label>Plan Type (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_WFP__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_WFSC__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_WF_REP__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_Account_Description1__c</fullName>
        <formula>Proposed_GL_Account_ID__c +&apos;-&apos;+ Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning Account Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Account_Description__c</fullName>
        <description>Auto-populated description</description>
        <label>Planning Account Description Not Used</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Account_Number1__c</fullName>
        <formula>&apos;ACC&apos;+ Proposed_GL_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Account_Number__c</fullName>
        <description>Auto-populated ID for P&amp;L Accounts</description>
        <label>Planning Account Number Not Used</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_GL_Account_GAAP_Hierar_Node_ID__c</fullName>
        <formula>Planning_GL_Account_GAAP_Hierarchy__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning GL Account GAAP Hierar Node ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_GL_Account_GAAP_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>Planning GL Account GAAP Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>Planning GL Account GAAP Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>GL Account</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posting_Rule_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter 10 and click on search</inlineHelpText>
        <label>Posting Rule Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reference_Data__c.Data_Element__c</field>
                <operation>equals</operation>
                <value>Posting Rule Group</value>
            </filterItems>
            <filterItems>
                <field>Reference_Data__c.Data_Element_ID_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Reference_Data__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_GL_Account_ID__c</fullName>
        <label>GL Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revalue_Open_Balance_for_Foreign_Currenc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to determine if the GL is a monetary account to be revalued</description>
        <label>Reval Open Balance for FX Trans.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Value__c</fullName>
        <description>Skip Value can be set when Time Balance is First, Balance, or Average. These options set which values to skip when the parent value is calculated: none, #MISSING, zeros, or #MISSING and zeros.</description>
        <label>Skip Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Missing Zeros</fullName>
                </value>
                <value>
                    <fullName>Missing and Zeros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solve_Order_CONSOL__c</fullName>
        <description>The solve order number determines the order by which members are evaluated in the dimension. You can select a number between 1 and 127. The member with the highest solve order number is evaluated first (for example, a formula with a solve order number of 20 is evaluated before a formula with a solve order number of five).</description>
        <label>Solve Order (CONSOL)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solve_Order_WF_REP__c</fullName>
        <description>The solve order number determines the order by which members are evaluated in the dimension. You can select a number between 1 and 127. The member with the highest solve order number is evaluated first (for example, a formula with a solve order number of 20 is evaluated before a formula with a solve order number of five).</description>
        <label>Solve Order (WF_REP)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Plan_Type__c</fullName>
        <description>Defines the database that owns this member within EPBCS</description>
        <label>Source Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REVPLAN</fullName>
                </value>
                <value>
                    <fullName>CONSOL</fullName>
                </value>
                <value>
                    <fullName>OEP_WFP</fullName>
                </value>
                <value>
                    <fullName>OEP_WFSC</fullName>
                </value>
                <value>
                    <fullName>OEP_REP</fullName>
                </value>
                <value>
                    <fullName>OEP_FS</fullName>
                </value>
                <value>
                    <fullName>WF_REP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statistical_Account_Description1__c</fullName>
        <formula>Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statistical Account Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statistical_Account_Description__c</fullName>
        <description>Statistical account description</description>
        <label>Statistical Account Description Not Used</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statistical_Account_Hierarchy_Node_ID__c</fullName>
        <formula>Statistical_Account_Hierarchy__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statistical Account Hierarchy Node ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statistical_Account_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use *0* to search</inlineHelpText>
        <label>Statistical Account Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>GL Account</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>Statistical Account Hierarchy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>GL Accounts (Statistical Account Hierarchy)</relationshipLabel>
        <relationshipName>GL_Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Statistical_Account_Number1__c</fullName>
        <formula>Proposed_GL_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statistical Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statistical_Account_Number__c</fullName>
        <description>Statistical account number</description>
        <label>Statistical Account Number Not Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Statistical_Account_Status__c</fullName>
        <description>Posting status for statistical accounts</description>
        <label>Statistical Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Overall GL Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Posting_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to restrict postings to non-system generated account</description>
        <label>System Posting Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Balance__c</fullName>
        <description>https://docs.oracle.com/cd/E57185_01/OEPAG/ch12s03s02.html</description>
        <label>Time Balance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Balance</fullName>
                </value>
                <value>
                    <fullName>Average Fill</fullName>
                </value>
                <value>
                    <fullName>Weighted Average - Actual_Actual</fullName>
                </value>
                <value>
                    <fullName>Weighted Average - Actual_365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Two_Pass_Calculation__c</fullName>
        <description>Calculates a member on the second pass through the outline</description>
        <label>Two Pass Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDA__c</fullName>
        <description>A Alpha numeric flag that can be used on members</description>
        <label>UDA</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Internal_ID__c</fullName>
        <label>Unique Internal ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variance_Reporting__c</fullName>
        <description>Variance Reporting loads account members with an account type of Saved Assumption or if the record is rejected. Expense designates the saved assumption as an expense. The actual amount is subtracted from the budgeted amount to determine the variance. Non-Expense designates the Account as not an Expense. The budgeted amount is subtracted from the actual amount to determine the variance. Values for Account types: Revenue: Non-Expense, Expense: Expense, Asset: Non-Expense, Liability: Non-Expense, Equity: Non-Expense.</description>
        <label>Variance Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Non-Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1099_Misc_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want this to be captured in the IRS Form 1099 reporting</description>
        <label>1099-Misc Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <label>GL Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Proposed_GL_Account_ID__c</columns>
        <columns>Description__c</columns>
        <columns>Netsuite_Type__c</columns>
        <columns>GL_Account_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Posting_Rule_Group__c</columns>
        <columns>Alternate_GL_Category__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Proposed_GL_Account_ID__c</field>
            <operation>equals</operation>
            <value>115014</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fianance_MDM_L1_Approval_GL_Account</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L1 Approval</label>
        <queue>Finance_MDM_L1_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_CORP_FPA_GL_Account</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM CORP FPA</label>
        <queue>Finance_MDM_CORP_FPA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Finance_Accounting_GL_Account</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Finance Accounting</label>
        <queue>Finance_MDM_Finance_Accounting</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Finance_Controller_GL_Account</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Finance Controller</label>
        <queue>Finance_MDM_Finance_Controller</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_L2_Approval_GL_Account</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L2 Approval</label>
        <queue>Finance_MDM_L2_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_L3_Approval_GL_Account</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM L3 Approval</label>
        <queue>Finance_MDM_L3_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_MDM_Revenue_Controller_GL_Account</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance MDM Revenue Controller</label>
        <queue>Finance_MDM_Revenue_Controller</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>SFDC Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Business_Segment_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(TEXT(Netsuite_Type__c) = &apos;Income&apos;,TEXT(Netsuite_Type__c) = &apos;Deferred Revenue&apos;), ISBLANK(   Business_Segment__c   ))</errorConditionFormula>
        <errorDisplayField>Business_Segment__c</errorDisplayField>
        <errorMessage>Need to select Business Segment if Account Type is Income/Deferred Revenue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FX_Clearing_Required_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, ISPICKVAL( Netsuite_Type__c , &apos;Bank&apos;) , FX_Clearing__c )</errorConditionFormula>
        <errorDisplayField>FX_Clearing__c</errorDisplayField>
        <errorMessage>If NetSuite Type is Bank then FX Clearing can’t be checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Function_cost_center_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(TEXT(Netsuite_Type__c) = &apos;Income&apos;,TEXT(Netsuite_Type__c) = &apos;Deferred Revenue&apos;), ISBLANK(  Function_Cost_Center__c  ))</errorConditionFormula>
        <errorDisplayField>Function_Cost_Center__c</errorDisplayField>
        <errorMessage>Need to select Function (Cost Center) if Account Type is Income/Deferred Revenue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GL_Account_ID_Freezed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, Freez_Record__c, ISCHANGED(Proposed_GL_Account_ID__c))</errorConditionFormula>
        <errorDisplayField>Proposed_GL_Account_ID__c</errorDisplayField>
        <errorMessage>GL Account ID can&apos;t be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Netsuite_Type_FReezed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, Freez_Record__c, ISCHANGED( Netsuite_Type__c ))</errorConditionFormula>
        <errorDisplayField>Netsuite_Type__c</errorDisplayField>
        <errorMessage>Netsuite Type can&apos;t be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nutsuite_Bank_Currency_Required_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, ISPICKVAL( Netsuite_Type__c , &apos;Bank&apos;),  Currency__c = null )</errorConditionFormula>
        <errorDisplayField>Currency__c</errorDisplayField>
        <errorMessage>Currency is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Posting_Rule_Group_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, OR(
TEXT(Netsuite_Type__c) = &apos;Other Income&apos;,
TEXT(Netsuite_Type__c) = &apos;Income&apos;,
TEXT(Netsuite_Type__c) = &apos;Cost of Goods Sold&apos;,
TEXT(Netsuite_Type__c) = &apos;Expense&apos;,
TEXT(Netsuite_Type__c) = &apos;Other Expense&apos;,
TEXT(Netsuite_Type__c) = &apos;Non Posting&apos;
), ISBLANK(  Posting_Rule_Group__c  ))</errorConditionFormula>
        <errorDisplayField>Posting_Rule_Group__c</errorDisplayField>
        <errorMessage>Need to select Posting rule Group if Account Type is P&amp;L.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Statistical_Account_Hierarchy_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c, TEXT(Netsuite_Type__c) = &apos;Statistical&apos;, ISBLANK( Statistical_Account_Hierarchy__c ))</errorConditionFormula>
        <errorDisplayField>Statistical_Account_Hierarchy__c</errorDisplayField>
        <errorMessage>Need to select Statistical Account Hierarchy if Account Type is Statistical</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stop_Using_certain_number_as_GL_Number</fullName>
        <active>true</active>
        <description>990200,990201,990202,990203,990204,990205,990206,990207,990208,990209</description>
        <errorConditionFormula>AND(!$User.BypassValidationRules__c,
OR( 
 CONTAINS( Proposed_GL_Account_ID__c,&apos;990200&apos;)
, CONTAINS( Proposed_GL_Account_ID__c,&apos;990201&apos;)
, CONTAINS( Proposed_GL_Account_ID__c,&apos;990202&apos;)
, CONTAINS( Proposed_GL_Account_ID__c,&apos;990203&apos;)
, CONTAINS( Proposed_GL_Account_ID__c,&apos;990204&apos;)
, CONTAINS( Proposed_GL_Account_ID__c,&apos;990205&apos;)
, CONTAINS( Proposed_GL_Account_ID__c,&apos;990206&apos;)
, CONTAINS( Proposed_GL_Account_ID__c,&apos;990207&apos;)
, CONTAINS( Proposed_GL_Account_ID__c,&apos;990208&apos;)
, CONTAINS( Proposed_GL_Account_ID__c,&apos;990209&apos;)
)
)</errorConditionFormula>
        <errorDisplayField>Proposed_GL_Account_ID__c</errorDisplayField>
        <errorMessage>This GL Number can&apos;t be used.</errorMessage>
    </validationRules>
</CustomObject>